--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "pr_changelog",
+  "name": "local-pr-changelog",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "generate changelog from PullRequest Merge commits",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d bin",
+    "test": "./node_modules/.bin/jest"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Yasuharu Yanamura",
+  "license": "MIT",
   "bin": {
-    "pr_changelog": "index.js"
+    "pr_changelog": "bin/index.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "commander": "^2.11.0",
     "shelljs": "^0.7.8"
+  },
+  "devDependencies": {
+    "jest": "^21.0.2"
   }
 }
