--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "local-pr-changelog",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "generate changelog from PullRequest Merge commits",
   "main": "src/index.js",
   "scripts": {
     "build": "babel src -d bin",
-    "test": "./node_modules/.bin/jest"
+    "test": "./node_modules/.bin/jest",
+    "prepublish": "npm run build"
   },
   "author": "Yasuharu Yanamura",
   "license": "MIT",
