--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "local-pr-changelog",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "generate changelog from PullRequest Merge commits",
-  "main": "src/index.js",
+  "main": "./bin/index.js",
   "scripts": {
     "build": "babel src -d bin",
     "test": "./node_modules/.bin/jest",
@@ -11,7 +11,7 @@
   "author": "Yasuharu Yanamura",
   "license": "MIT",
   "bin": {
-    "local-pr-changelog": "bin/index.js"
+    "local-pr-changelog": "./bin/index.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
