--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "local-pr-changelog",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "generate changelog from PullRequest Merge commits",
   "main": "./bin/index.js",
   "scripts": {
     "build": "babel src -d bin",
-    "test": "./node_modules/.bin/jest",
-    "prepublish": "npm run build"
+    "test": "./node_modules/.bin/jest"
   },
   "author": "Yasuharu Yanamura",
   "license": "MIT",
