--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "local-pr-changelog",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "generate changelog from PullRequest Merge commits",
   "main": "./bin/index.js",
   "scripts": {
     "build": "babel src -d bin",
-    "test": "./node_modules/.bin/jest"
+    "test": "./node_modules/.bin/jest",
+    "prebuild": "npm run build"
   },
   "author": "Yasuharu Yanamura",
   "license": "MIT",
